# mlflow-elasticsearchstore

./: .gitattributes  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  pylama.ini  pytest.ini  requirements.txt  setup.cfg  setup.py  tests-requirements.txt
.github/workflows/: python-app.yml
mlflow_elasticsearchstore/: _version.py  elasticsearch_store.py  models.py  script_elastic_store.py  test_elastic_store.py
mlflow_elasticsearchstore/model_registry/: elasticsearch_store.py  models.py
mlflow_elasticsearchstore/tracking/: elasticsearch_store.py  models.py
tests/: conftest.py
tests/integration_tests/: test_integration_elasticsearchstore.py
tests/model_registry/: conftest.py
tests/model_registry/unit_tests/: test_elasticsearchstore.py  test_mlflow_to_elasticsearchstore.py
tests/scripts/: initialize_database.sh  restore_database.sh
tests/snapshot/backup/: index-0
tests/snapshot/backup/indices/-yhP_z8eS7K-GbTIYbKrQQ/0/: __36y1rFaaTJiI_j-kYg4TEQ  __P3Y3ItN1SXCPEs_FVOuntQ  __obCYmybhSQ65MSqbHQPU2A  __yzB-F2wkR3yCTVC_ONzn0A  index-2kmhRQyITC-rRuEhIIYybw
tests/snapshot/backup/indices/1lnc94PAReehxwn_-gm5IA/0/: __1CoMoF8kQLipn5w5vpp2RQ  __MAHSvrXwTLmHK4fZp-Flgg  (+1 more)
tests/snapshots/backup/: index-0
tests/snapshots/my_fs_backup_location/: index-0
tests/tracking/: conftest.py
tests/tracking/integration_tests/: test_integration_elasticsearchstore.py
tests/tracking/unit_tests/: test_elasticsearchstore.py  test_mlflow_to_elasticsearchstore.py
tests/unit_tests/: test_elasticsearchstore.py  test_mlflow_to_elasticsearchstore.py
(+211 files in other folders)
