[metadata]
license_file = LICENSE

[versioneer]
VCS = git
style = pep440
versionfile_source = mlflow_elasticsearchstore/_version.py
versionfile_build = mlflow_elasticsearchstore/_version.py
tag_prefix =
parentdir_prefix = mlflow-elasticsearchstore-

[mypy]
files = mlflow_elasticsearchstore/**/*.py

[mypy-mlflow_elasticsearchstore._version]
ignore_errors = True